--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,53 @@
 @tailwind components;
 
 @tailwind utilities;
+
+body {
+  background-color: #f5f5f5;
+
+}
+@font-face {
+  font-family: 'Sigmar One';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Sigmar One Regular'), local('SigmarOne-Regular'),
+    url(https://fonts.gstatic.com/s/sigmarone/v8/co3DmWZ8kjZuErj9Ta3do6vppkDi.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Sigmar One';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Sigmar One Regular'), local('SigmarOne-Regular'),
+    url(https://fonts.gstatic.com/s/sigmarone/v8/co3DmWZ8kjZuErj9Ta3do6rppkDi.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Sigmar One';
+  font-style: normal;
+  font-weight: 200;
+  src: local('Sigmar One Regular'), local('SigmarOne-Regular'),
+    url(https://fonts.gstatic.com/s/sigmarone/v8/co3DmWZ8kjZuErj9Ta3do6Tppg.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+    U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+html,
+body {
+  cursor: url('/assets/icon/guitar.cur'), default;
+}
+
+/* 一般浏览器的不要太小，容易看不见 */
+*::-webkit-scrollbar {
+  width: 3px;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background: rgba(0, 0, 0, 0.2);
+}
+*::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: rgba(0, 0, 0, 0.1);
+}
