feat: 修复关于我右侧点击效果

--- a/src/pages/about/style/index.module.less
+++ b/src/pages/about/style/index.module.less
@@ -16,15 +16,15 @@
     }
   }
   .md_cat {
-    // width: 400px;
-    // padding: 10px;
-    // max-height: 50vh;
-    // background: #fff;
-    // border-radius: 4px;
-    // position: sticky;
-    // top: 30px;
-    // left: 400px;
-    // overflow-y: auto;
+    width: 400px;
+    padding: 10px;
+    max-height: 50vh;
+    background: #fff;
+    border-radius: 4px;
+    position: sticky;
+    top: 30px;
+    left: 400px;
+    overflow-y: auto;
   }
 }
 
