--- a/src/components/ScrollTop/style/index.module.less
+++ b/src/components/ScrollTop/style/index.module.less
@@ -8,6 +8,7 @@
   color: #fff;
   border: none;
   border-radius: 50%;
+  z-index: 99;
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.3s;
