--- a/src/layout/HeadNav/style/index.module.less
+++ b/src/layout/HeadNav/style/index.module.less
@@ -14,6 +14,7 @@
     width: 100vw;
     .navBar {
       display: flex;
+      align-items: center;
     }
     .menuItem {
       padding: 0 10px;
