--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,9 @@ body {
   background-color: #f5f5f5;
 
 }
-
+.ant-btn {
+  background: #ff8fab;
+}
 @font-face {
   font-family: 'Sigmar One';
   font-style: normal;
