--- a/src/components/Login/style/index.module.less
+++ b/src/components/Login/style/index.module.less
@@ -26,10 +26,13 @@
 }
 
 @media screen and (max-width: 991px) {
+  .login_container{
+    display: none;
+  }
   .code{
     width: 140px;
     font-size: 4px;
     font-size: 20px;
   }
 }
-  
+
